--- a/SecureNotesWebAPI/appsettings.json
+++ b/SecureNotesWebAPI/appsettings.json
@@ -1,6 +1,17 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=SecureNotesDB;Integrated Security=True;Persist Security Info=False;Pooling=False;MultipleActiveResultSets=False;Connect Timeout=60;Encrypt=False;TrustServerCertificate=True"
+  },
   "AppSettings": {
-    "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
+    "Secret": "THIS IS THE APPLICATION SECRET KEY DONT TELL ANYONE"
+  },
+  "JwtIssuerOptions": {
+    "Issuer": "webApi",
+    "Audience": "http://localhost:5000/"
+  },
+  "FacebookAuthSettings": {
+    "AppId": "1528751870549294",
+    "AppSecret": "bed77aaafe5c57fc8656c0a1e2533760"
   },
   "Logging": {
     "IncludeScopes": false,
